<resources>
    <string name="app_name">Uzi</string>
    <string name="we_connect">We Connect</string>
    <string name="todo2">TODO2</string>
    <string name="todo1">TODO</string>
    <string name="todo5">TODO</string>
    <string name="email">Username</string>
    <string name="password1">New password</string>
    <string name="paswword3">Conform new password</string>
    <string name="fullname"> Full Name</string>
    <string name="email1"> Email</string>
    <string name="Login">Login</string>
    <string name="Home">Home</string>
    <string name="Deal">Deal</string>
    <string name="Profile">Profile</string>
    <string name="Conform">Conform</string>
    <string name="phone">+255</string>
    <string name="CheckBox">I nderstand the policy and agree</string>
    <string name="hot_deals">Hot deals</string>
    <string name="Submit">Submit</string>
    <string name="forget_password1" translatable="false"><a name="www.google.com"><u>Forget Password</u></a></string>
    <string name="Sign_Up" translatable="false"><a name="www.google.com"><u>Sign Up</u></a></string>
    <string name="SignUp">Create</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="password">password</string>
    <string name="joe_email_com" translatable="false">joe@email.com</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
</resources>