<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".SignUp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.343"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="129dp"
                android:layout_height="110dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_poly11"
                android:contentDescription="@string/todo7" />
    <androidx.constraintlayout.widget.Group
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="184dp"
                android:layout_height="68dp"
                android:contentDescription="@string/todo1"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.471"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.343"
                app:srcCompat="@drawable/ic_uzi_icon"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="245dp"
                android:layout_height="51dp"
                android:layout_marginTop="16dp"
                android:autofillHints="janeth"
                android:background="@drawable/inputrect"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/fullname"
                android:inputType="textEmailAddress"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColorHint="@color/faint_color"
                app:layout_constraintBottom_toBottomOf="@id/imageView"
                app:layout_constraintVertical_bias="0.009"
                android:layout_gravity="center_horizontal"/>
            <EditText
                android:id="@+id/editTextTextEmailAddress1"
                android:layout_width="245dp"
                android:layout_height="51dp"
                android:layout_marginTop="16dp"
                android:autofillHints="janeth"
                android:background="@drawable/inputrect"
                android:drawableStart="@drawable/ic_round_email"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColorHint="@color/faint_color"
                app:layout_constraintBottom_toBottomOf="@id/editTextTextEmailAddress"
                app:layout_constraintVertical_bias="0.009"
                android:layout_gravity="center_horizontal"/>

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="245dp"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:autofillHints="1234"
                android:background="@drawable/inputrect"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:inputType="textPassword"
                android:textColorHint="@color/faint_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
                app:layout_constraintVertical_bias="0.005"
                android:layout_gravity="center_horizontal"/>


            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="245dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="phone"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/inputrect"
                android:layout_marginTop="12dp"
                android:digits="0123456789+"
                android:autofillHints="">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/country_code_picker"
                    app:ccp_hintExampleNumber="true"
                    android:minWidth="220dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="23dp"
                    android:gravity="start|center_vertical"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/country_text_view"
                    tools:layout_editor_absoluteX="19dp"
                    tools:layout_editor_absoluteY="48dp"
                    android:layout_width="246dp"
                    android:layout_height="wrap_content"
                    />

            </EditText>

            <Button
                android:id="@+id/button"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/lexendgigaregular"
                android:gravity="center_horizontal"
                android:text="@string/SignUp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/robotobold"
                android:text="@string/Login"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_gravity="center_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:layout_constraintVertical_bias="0.032"
                android:gravity="center_horizontal"/>

</androidx.constraintlayout.widget.Group>

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="224dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/todo8"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:srcCompat="@drawable/ic_poly12" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
